# claudia

./: .gitignore
claudia-server/: DEPLOYMENT.md  README.md
claudia-server-rust/: Cargo.toml  DEPLOYMENT.md  README.md
claudia-server-rust/examples/clients/: bash-client.sh  nodejs-client.js  package.json  python-client.py
claudia-server-rust/src/: api.rs  claude.rs  main.rs  process.rs  websocket.rs
claudia-server/src/: api.rs  claude.rs  config.rs  main.rs  process.rs  server.rs  websocket.rs
